#19 - revised dev enviroment setup with SBT build process.